2008-07-10  Ryan Lortie  <desrt@desrt.ca>

 	* docs/reference/glib/glib-sections.txt:
 	* glib/glib.symbols:
 	* glib/gmarkup.c:
 	* glib/gmarkup.h: add functions g_markup_parse_context_{push,pop} in
 	order to provide some small hooks on which to build easy-to-use
 	subparsers.
 
 	* glib/tests/Makefile: add new test
 	* glib/tests/markup-subparser.c: new test for subparsers
 
 	Fixes bug #337518.

2008-07-05  Matthias Clasen  <mclasen@redhat.com>

	Bug 528317 – GRegex does not allow recursion limit

	* glib/pcre/Makefile.am: Set a sane default recursion limit
	of 8192 instead of 1000000. 
	Patch by Mart Raudsepp.

2008-07-04  Behdad Esfahbod  <behdad@gnome.org>

	Bug 541507 – Ambiguous description of assigned characters in the Glib
	Unicode Manipulation reference

	* glib/guniprop.c
	(g_unichar_isgraph): Return true for PrivateUse too.
	(g_unichar_isprint): Return true for PrivateUse too.
	(g_unichar_isdefined): Return false for Surrogate.

2008-07-04  Michael Natterer  <mitch@imendio.com>

	Bug 541208 – Functions to easily install and use signals without
	class struct slot

	* tests/gobject/override.c: added tests for the new gsignal
	overriding and chaining APIs.

2008-07-02  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.17.3 ===

2008-07-02  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Better endianness fix. From Tomas Mraz.

2008-07-02  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates

2008-07-02  Colin Walters  <walters@redhat.com>

	* gio/gcontenttype.c: Use UNLOCK to unlock, not LOCK.

2008-07-02  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Add a check for structfs.f_bavail

2008-07-02  Matthias Clasen  <mclasen@redhat.com>

	* glib/gmain.c (g_get_current_time): Add a g_return_val_if_fail
	check in both versions. Proposed by Patrik Olsson in bug 540545.

2008-07-02  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Workaround AC_C_BIGENDIAN breakage in autoconf 2.61.